# streamlit_nautical_dashboard

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  supabase_sync.py
.streamlit/: config.toml
migrations/: 2026_05_07_deactivate_dock_buckets.sql
modules/: cogs.py  revenue.py
src/nautical_dashboard/: check_tables.py  main.py  supabase_sync.py
src/nautical_dashboard/app/export/: lifetime_external_snapshot.py  profitability_report.py  program_snapshot.py  program_snapshot_external.py
src/nautical_dashboard/app/modules/: allocation_engine.py  allocations.py  auth.py  auth_admin.py  email_client.py  preflight.py  production_activity.py  profitability.py  raw_goods.py  revenue.py  sga.py  wip_freight.py  wip_labor.py  wip_labor_allocation.py  wip_labor_compute.py  wip_labor_container_unload.py  wip_labor_review.py
src/nautical_dashboard/tools/: set_password.py  supabase_sync.py
