[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautical-dashboard"
version = "0.1.0"
description = "Financial dashboard for Nautical revenue and COGS tracking"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "altair>=5.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",  # for Postgres connections
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nautical_dashboard = ["*.toml", "*.yaml", "*.env*"]
